--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
